--- a/savedsearch-core/.classpath
+++ b/savedsearch-core/.classpath
@@ -1,36 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/main/java" />
-	<classpathentry kind="src" path="src/test/java" />
-	<classpathentry kind="con"
-		path="org.eclipse.jdt.USER_LIBRARY/EclipseLink" />
-	<classpathentry kind="con"
-		path="org.eclipse.jst.j2ee.internal.module.container" />
-	<classpathentry kind="con"
-		path="oracle.eclipse.tools.weblogic.lib.system">
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="src/test/java"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipseLink"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="con" path="oracle.eclipse.tools.weblogic.lib.system">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.utility" />
+			<attribute name="owner.project.facets" value="jst.utility"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con"
-		path="oracle.eclipse.tools.weblogic.lib.application/savedsearch-ee" />
-	<classpathentry kind="con"
-		path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Oracle WebLogic Server 12c (12.1.2) JRE">
+	<classpathentry kind="con" path="oracle.eclipse.tools.weblogic.lib.application/savedsearch-ee"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Oracle WebLogic Server 12c (12.1.2) JRE">
 		<attributes>
-			<attribute name="owner.project.facets" value="java" />
+			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con"
-		path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4" />
-	<classpathentry combineaccessrules="false" kind="src"
-		path="/savedsearch-db" />
-	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER" />
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/savedsearch-db"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="src" path=".apt_src">
 		<attributes>
-			<attribute name="optional" value="true" />
+			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib"
-		path="/home/sdhamdhe/.gradle/caches/modules-2/files-2.1/log4j/log4j/1.2.17/5af35056b4d257e4b64b9e8069c0746e8b08629f/log4j-1.2.17.jar" />
-	<classpathentry kind="output" path="bin" />
+	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/javax.persistence-2.0.0.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
