--- a/savedsearch-web/.project
+++ b/savedsearch-web/.project
@@ -1,22 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>savedsearch-ws</name>
+	<name>savedsearch-web</name>
 	<comment></comment>
 	<projects>
+		<project>savedsearch-core</project>
+		<project>savedsearch-webutils</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.wst.jsdt.core.javascriptValidator</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>oracle.eclipse.tools.webservices.WebServicesValidationBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>oracle.eclipse.tools.webservices.WebServicesPublishCleaner</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
