--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -12,7 +12,7 @@ war {
 
 task runQATestSuite(type: Test){
         useTestNG(){
-        dependsOn ':ear:ear', ':ear:appServerRedeploy'
+        dependsOn ':savedsearch-ear:ear', ':savedsearch-ear:appServerRedeploy'
         useDefaultListeners = true
         outputDirectory = file("$buildDir/testngoutput")
         suites file('testngsuite.xml')
