Modified the appServerConfig.config file with the correct machine where wls is running.

--- a/appServerConfig.config
+++ b/appServerConfig.config
@@ -1,13 +1,13 @@
 environments {
 	dev {
-		serverName = 'slc01avc.us.oracle.com'
+		serverName = 'slc05zch.us.oracle.com'
 		port = '8090'
 		adminUser = 'laas'
 		adminUserPwd = 'oracle123'
 	}
 
 	test {
-		serverName = 'slc01avc.us.oracle.com'
+		serverName = 'slc05zch.us.oracle.com'
 		port = '8090'
 		adminUser = 'laas'
 		adminUserPwd = 'oracle123'
