--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,11 @@ systemProp.http.nonProxyHosts=*.oracle.com|localhost
 artifactory_user=em-alm
 artifactory_password={DESede}eHc0bSvsxdGITA8Yd1eJVg==
 artifactory_contextUrl=http://almprd-mr1.us.oracle.com:8081/artifactory
+
+#ftp
+ftpserver=scl36023.us.oracle.com
+username=ssfdoc
+password=ssfdoc
+
+remote_javadoc_dir=javadoc
+remote_restdoc_dir=restdoc
