--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -79,8 +79,8 @@ task ftpRestDoc << {
 			taskdef(name: 'ftp',
                 classname: 'org.apache.tools.ant.taskdefs.optional.net.FTP',
                 classpath: configurations.ftpAntTask.asPath)
-			ftp(server: 'scl36023.us.oracle.com', userid: 'ssfdoc', password: 'ssfdoc',remotedir: 'restdoc') {
-				fileset(dir: 'build/restdoc')
+			ftp(server: ftpserver, userid: username, password: password, remotedir: remote_restdoc_dir) {
+				fileset(dir: "${restDocOutputDir}")
 			}
 		}
 	}
