--- a/build.gradle
+++ b/build.gradle
@@ -71,3 +71,6 @@ buildscript {
 }
 
 apply from: file('./deploy.gradle') 
+// Apply code coverage gradle file. Defines jacoco and sonar properties.
+project.ext.set("source_cc", "${rootDir}/codeCoverage")
+apply from: "${project.ext.source_cc}/codeCoverage.gradle" 
