updated with new schema for junit test case

--- a/savedsearch-core/TestNG.properties
+++ b/savedsearch-core/TestNG.properties
@@ -1,4 +1,4 @@
-javax.persistence.jdbc.url=jdbc:oracle:thin:@slc02kaa.us.oracle.com:25059:ssearch
-javax.persistence.jdbc.user=emaas
-javax.persistence.jdbc.password=emaas
+javax.persistence.jdbc.url=jdbc:oracle:thin:@slc04pxo.us.oracle.com:1521:orcl
+javax.persistence.jdbc.user=ssf_dev_new
+javax.persistence.jdbc.password=ssf_dev_new
 javax.persistence.jdbc.driver=oracle.jdbc.OracleDriver
