Fix CORS filter - web.xml wasn't getting included with war

--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -20,6 +20,11 @@ war {
 		include '**/*.properties'
 		into('WEB-INF/classes') 
 	}
+	from('WebContent/WEB-INF') {
+                include '**/web.xml'
+                into('WEB-INF')
+        }
+
 }
 
 task runQATestSuite(type: Test){
