--- a/build.gradle
+++ b/build.gradle
@@ -107,7 +107,7 @@ buildscript {
 	}  
 }
 
-apply from: file('./deploy.gradle') 
+//apply from: file('./deploy.gradle') 
 // Apply code coverage gradle file. Defines jacoco and sonar properties.
 project.ext.set("source_cc", "${rootDir}/codeCoverage")
 apply from: "${project.ext.source_cc}/codeCoverage.gradle" 
