fix test case failure and code clean

--- a/appServerConfig.config
+++ b/appServerConfig.config
@@ -1,15 +1,15 @@
 environments {
 	dev {
-		serverName = 'slc05zch.us.oracle.com'
-		port = '8090'
-		adminUser = 'laas'
-		adminUserPwd = 'oracle123'
+		serverName = 'slc00bqs.us.oracle.com'
+		port = '7021'
+		adminUser = 'weblogic'
+		adminUserPwd = 'welcome1'
 	}
 
 	test {
-		serverName = 'slc05zch.us.oracle.com'
-		port = '8090'
-		adminUser = 'laas'
-		adminUserPwd = 'oracle123'
+		serverName = 'slc00bqs.us.oracle.com'
+		port = '7021'
+		adminUser = 'weblogic'
+		adminUserPwd = 'welcome1'
 	}
 }
