--- a/savedsearch-core/.classpath
+++ b/savedsearch-core/.classpath
@@ -26,5 +26,12 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/testng-6.8.jar"/>
+	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/ojdbc6-12.1.2-0-0.jar"/>
+	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/json-path-2.3.1.jar"/>
+	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/jackson-core-asl-1.9.2.jar"/>
+	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/jackson-jaxrs-1.9.2.jar"/>
+	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/jackson-mapper-asl-1.9.2.jar"/>
+	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/jackson-xc-1.9.2.jar"/>
+	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/jettison-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
