--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -20,5 +20,11 @@ dependencies {
 	compile(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2')
 	compile(group: 'javax', name: 'ejb', version: '3.2.0')
 	compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.8.8')
+        compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.1')
+
+        compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.1')
+        compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12')
+        compile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2')
+
 	
 }
