--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -20,6 +20,10 @@ war {
 		include '**/*.properties'
 		into('WEB-INF/classes') 
 	}
+        from('src/main/java') {
+                include '**/*.xsd'
+                into('WEB-INF/classes')
+        }
 	from('WebContent/WEB-INF') {
                 include '**/web.xml'
                 into('WEB-INF')
