--- a/savedsearch-web/.classpath
+++ b/savedsearch-web/.classpath
@@ -43,5 +43,6 @@
 	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/httpclient-4.2.6.jar"/>
 	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/httpcore-4.2.5.jar"/>
 	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/httpmime-4.2.6.jar"/>
+	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
