--- a/savedsearch-ear/build.gradle
+++ b/savedsearch-ear/build.gradle
@@ -32,7 +32,10 @@ dependencies
 	earlib (project(':savedsearch-entities')){transitive = false}
 	earlib (project(':savedsearch-web-utils')){transitive = false} 
 	earlib(group: 'emaas.platform', name: 'registry-lookup-client', version: '0.5.2') {transitive=false }
-	earlib(group: 'emaas.platform', name: 'registry-client', version: '0.5.2') {transitive=false }	
+	earlib(group: 'emaas.platform', name: 'registry-client', version: '0.5.2') {transitive=false }
+        earlib(group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.0') {transitive=false }
+        earlib(group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.0') {transitive=false }
+        earlib(group: 'org.apache.logging.log4j', name: 'log4j-web', version: '2.0') {transitive=false }	
 	earlib (group: 'log4j', name: 'log4j', version: '1.2.16') {transitive=false }
 }
 
