--- a/savedsearch-web/WebContent/WEB-INF/web.xml
+++ b/savedsearch-web/WebContent/WEB-INF/web.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xmlns="http://java.sun.com/xml/ns/javaee" 
+         xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
+         id="WebApp_ID" version="3.0">
   <display-name>savedsearch</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -15,8 +19,25 @@
   </filter>
   <filter-mapping>
     <filter-name>CORS.filter</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/v1/*</url-pattern>
     <dispatcher>FORWARD</dispatcher>
     <dispatcher>REQUEST</dispatcher>
-  </filter-mapping>  
+  </filter-mapping> 
+  
+<security-constraint>
+  <web-resource-collection>
+    <web-resource-name>secure-pages</web-resource-name>
+    <url-pattern>/v1/*</url-pattern>
+  </web-resource-collection>
+  <auth-constraint>
+    <role-name>valid-users</role-name>
+  </auth-constraint>
+</security-constraint>
+<security-role>
+  <role-name>valid-users</role-name>
+</security-role>
+<login-config>
+    <auth-method>CLIENT-CERT,BASIC</auth-method>
+</login-config>
+   
 </web-app>
