--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ ext.serviceDistDir = "${distDir}${serviceInstallPath}"
 apply plugin: 'java' 
 
 allprojects {  
-	apply plugin: 'artifactory'  
-        apply plugin: 'DevInfraPlugin'
+	apply plugin: 'artifactory' 
+	apply plugin: 'DevInfraPlugin' 
 	ext.dependenciesDir = new File(rootDir, 'common') 
 	repositories {  
 		mavenLocal()  
@@ -48,11 +48,85 @@ artifactory {
 	}  
 } 
 
+
 subprojects { 
 	apply plugin: 'java' 
 	jar { manifest.attributes provider: 'Oracle EMaaS Applications' } 
 	ext.archiveBaseName = artifactPrefix + project.name  
 } 
+
+configurations {
+        prebuild_log4j { transitive = false }
+	prebuild_toplink { transitive = false }
+	prebuild_servicemanager { transitive = false } 
+	prebuild_savedsearch { transitive = false }
+	prebuild_junit { transitive = false }
+	prebuild_apacheHttp { transitive = false }
+	prebuild_jaxrs { transitive = false }
+	prebuild_testng { transitive = false }
+	prebuild_wlfullc { transitive = false }
+
+}
+
+dependencies {
+		
+	prebuild_log4j 'log4j:log4j:1.2.17'
+	prebuild_toplink 'org.eclipse.persistence:eclipselink:2.4.2',
+                         'org.eclipse.persistence:javax.persistence:2.0.0'
+	prebuild_servicemanager 'emaas.platform:registry-client:0.4',
+                                'emaas.platform:registry-lookup-client:0.3'
+	prebuild_savedsearch    'com.oracle.adf:wls-api:12.1.2-0-0',
+				'com.oracle.weblogic:ojdbc6:12.1.2-0-0',
+				'javax.transaction:javax.transaction-api:1.2',
+				'javax:ejb:3.2.0',
+				'javax.servlet:servlet-api:2.5',
+				'javax.ws.rs:javax.ws.rs-api:2.0',
+				'commons-codec:commons-codec:1.6',
+				'commons-logging:commons-logging:1.1.1'
+	prebuild_junit 'org.hamcrest:hamcrest-core:1.3', 'junit:junit:4.11'
+	prebuild_apacheHttp 'org.apache.httpcomponents:httpclient:4.3.1',
+			    'org.apache.httpcomponents:httpcore:4.3',
+			    'org.apache.httpcomponents:httpmime:4.3.1'
+	prebuild_jaxrs  'org.codehaus.jackson:jackson-core-asl:1.9.1',
+			'org.codehaus.jackson:jackson-mapper-asl:1.9.12',
+			'org.codehaus.jackson:jackson-jaxrs:1.9.2', 
+			'org.codehaus.jackson:jackson-mapper-asl:1.9.2',
+			'org.codehaus.jackson:jackson-xc:1.9.2'	,		
+			'org.codehaus.jackson:jackson-core-asl:1.8.8',
+			'com.sun.jersey:jersey-core:1.17.1',
+			'com.sun.jersey:jersey-json:1.17.1', 
+			'com.sun.jersey:jersey-server:1.17.1', 
+			'com.sun.jersey:jersey-servlet:1.17.1',
+			'org.codehaus.jettison:jettison:1.1'
+	prebuild_testng 'org.testng:testng:6.8.8',
+			'com.sun.jersey:jersey-client:1.17',
+			'com.sun.jersey.contribs:jersey-multipart:1.17.1',
+			'org.codehaus.groovy:groovy-all:2.2.1',
+			'org.apache.commons:commons-lang3:3.1',
+			'com.jayway.restassured:json-path:1.8.1',
+			'com.jayway.restassured:xml-path:1.9.0',
+			'com.jayway.restassured:rest-assured-common:2.3.1',
+			'com.jayway.restassured:rest-assured:2.3.1'
+	prebuild_wlfullc 'test:wlfullclient:2.6'
+}
+
+// Copy downloaded 3rd party jars from Artifactory into the locations 
+// that we are using those jars from as of now.
+task preBuildCompile(type: Copy) {
+   ext.afDir = new File(rootDir, 'dependencies/artifactory')   
+   from configurations.prebuild_toplink
+   from configurations.prebuild_log4j
+   from configurations.prebuild_servicemanager
+   from configurations.prebuild_savedsearch
+   from configurations.prebuild_junit
+   from configurations.prebuild_apacheHttp
+   from configurations.prebuild_jaxrs
+   from configurations.prebuild_testng
+   from configurations.prebuild_wlfullc
+   into "$afDir"
+}
+
+compileJava.dependsOn preBuildCompile
 
 project(':savedsearch-web'){
 	configurations {
@@ -105,7 +179,7 @@ buildscript {
 
 	dependencies {  
 		classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:2.1.0'  
-                classpath 'com.oracle.emaas.emdi:DevInfraPlugin:1.0.+'
+		classpath 'com.oracle.emaas.emdi:DevInfraPlugin:1.0.+'
 	}  
 }
 
