--- a/savedsearch-entities/.classpath
+++ b/savedsearch-entities/.classpath
@@ -8,8 +8,8 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/eclipselink-2.4.2.jar"/>
-	<classpathentry kind="lib" path="/net/slc04wjk/scratch/download/ssf_jars/javax.persistence-2.0.0.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/eclipselink-2.4.2.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/javax.persistence-2.0.0.jar"/>
 	<classpathentry kind="con" path="oracle.eclipse.tools.weblogic.lib.system">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.utility"/>
