add neccessary jars to run testng test in eclipse

--- a/savedsearch-web/.classpath
+++ b/savedsearch-web/.classpath
@@ -45,5 +45,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/xml-path-1.9.0.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/rest-assured-common-2.3.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
