--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ password=ssfdoc
 
 remote_javadoc_dir=javadoc
 remote_restdoc_dir=restdoc
+
+# Sonar runner (Code coverage reports) requires more memory to complete
+org.gradle.jvmargs=-XX:MaxPermSize=2g
