--- a/savedsearch-web/testenv.properties
+++ b/savedsearch-web/testenv.properties
@@ -1,4 +1,7 @@
-#Thu, 10 Jul 2014 18:46:26 -0700
+#Wed, 15 Oct 2014 23:51:32 -0700
 
-hostname=slc00bqs.us.oracle.com
-port=7021
+#hostname=slc00bqs.us.oracle.com
+#port=7021
+hostname=slc04wjk.us.oracle.com
+port=7001
+authToken=Basic d2VibG9naWM6d2VsY29tZTE=
