--- a/appServerConfig.config
+++ b/appServerConfig.config
@@ -12,4 +12,10 @@ environments {
 		adminUser = 'weblogic'
 		adminUserPwd = 'welcome1'
 	}
+	security {
+		serverName = 'slc03scq.us.oracle.com'
+		port = '7001'
+		adminUser = 'weblogic'
+		adminUserPwd = 'password1'
+	}
 }
