update the new token

--- a/savedsearch-web/testenv.properties
+++ b/savedsearch-web/testenv.properties
@@ -1,7 +1,7 @@
-#Wed, 15 Oct 2014 23:51:32 -0700
+#Mon, 27 Oct 2014 20:36:27 -0700
 
-hostname=slc00bqs.us.oracle.com
-port=7021
+hostname=slc03scq.us.oracle.com
+port=7001
 #hostname=slc04wjk.us.oracle.com
 #port=7001
-authToken=Basic d2VibG9naWM6d2VsY29tZTE=
+authToken=Basic d2VibG9naWM6cGFzc3dvcmQx
