--- a/savedsearch-tools/.classpath
+++ b/savedsearch-tools/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="/scratch/vinjoshi/Emaassrc/tmp/sprint19/emcpssf/dependencies/artifactory/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="/scratch/vinjoshi/Emaassrc/tmp/sprint19/emcpssf/dependencies/artifactory/rest-assured-2.3.1.jar"/>
