--- a/savedsearch-tools/.classpath
+++ b/savedsearch-tools/.classpath
@@ -15,5 +15,7 @@
 	<classpathentry kind="lib" path="/scratch/vinjoshi/Emaassrc/tmp/sprint19/emcpssf/dependencies/artifactory/xml-path-1.9.0.jar"/>
 	<classpathentry kind="lib" path="/scratch/vinjoshi/Emaassrc/tmp/sprint19/emcpssf/dependencies/artifactory/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="/scratch/vinjoshi/Emaassrc/tmp/sprint19/emcpssf/dependencies/artifactory/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/scratch/vinjoshi/Emaassrc/tmp/sprint19/emcpssf/dependencies/artifactory/registry-client-0.4.jar"/>
+	<classpathentry kind="lib" path="/scratch/vinjoshi/Emaassrc/tmp/sprint19/emcpssf/dependencies/artifactory/registry-lookup-client-0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
