--- a/savedsearch-tools/build.gradle
+++ b/savedsearch-tools/build.gradle
@@ -6,21 +6,25 @@ jar.archiveName='UpdateSavedSearch.jar'
 
 dependencies {
 	
+	compile(group: 'org.apache.commons', name:'commons-lang3', version:'3.1')
 	compile(group: 'org.hamcrest', name:'hamcrest-core', version: '1.3')
-	compile(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1')
-	compile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.1')
-	compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.1')
-	compile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1')
 	compile(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1')
 	compile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3')
-	compile(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1')
+	compile(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1')	
+	compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.1')
+	compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12')
+	
+	compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.1')
+	compile(group: 'com.jayway.restassured', name:'json-path', version:'1.8.1')
+	compile(group: 'log4j', name: 'log4j', version: '1.2.17')
+    compile(group: 'emaas.platform', name: 'registry-client', version: '0.4')
+	compile(group: 'emaas.platform', name: 'registry-lookup-client', version: '0.3')    
+	compile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.1')
+	compile(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1')	
+	compile(group: 'com.jayway.restassured', name:'xml-path', version:'1.9.0')	
+	compile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1')	
 	compile(group: 'org.apache.commons', name:'commons-lang3', version:'3.1')
 	compile(group: 'com.jayway.restassured', name:'json-path', version:'1.8.1')
-	compile(group: 'com.jayway.restassured', name:'xml-path', version:'1.9.0')
-	compile(group: 'org.apache.commons', name:'commons-lang3', version:'3.1')
-	compile(group: 'emaas.platform', name: 'registry-lookup-client', version: '0.3')
-    compile(group: 'emaas.platform', name: 'registry-client', version: '0.4')
-    compile(group: 'log4j', name: 'log4j', version: '1.2.17')	
 }
 
 
@@ -45,5 +49,9 @@ jar {
     
      from('src/main/java')  {
         include 'log4j_ssf.properties'
+     }
+     
+     from('src/main/java')  {
+        include 'help.txt'
      }
 }
