--- a/savedsearch-tools/build.gradle
+++ b/savedsearch-tools/build.gradle
@@ -14,13 +14,13 @@ task runUpdateSearchUtilTestSuite(type: Test){
 }
 
 sourceSets {
-                            test{
-                                java {
-                                          srcDirs = ['src/test/java']
-                                }
-                                resources.srcDirs = ['src/test/java']
-                            }
- }
+                test{
+                    java {
+                              srcDirs = ['src/test/java']
+                    }
+                    resources.srcDirs = ['src/test/java']
+                }
+			}
 
 dependencies {
 	
@@ -49,28 +49,29 @@ dependencies {
 
 version = '0.1'
 jar {
-            manifest {
-            attributes("Manifest-Version"       : "1.0",                
-                "Main-Class"             : "oracle.sysman.emSDK.emaas.platform.savedsearch.UpdateSavedSearch",
+            manifest
+             {
+            	attributes("Manifest-Version"       : "1.0",                
+                "Main-Class"             : "oracle.sysman.emSDK.emaas.platform.updatesavedsearch.UpdateSavedSearch",
                 "Class-Path"             :  "."
-            )
+           				  )
             }   
-     
- 
-       
-       
+           
        from 
        {
-        configurations.runtime.collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
+	        configurations.runtime.collect 
+	        {
+	            it.isDirectory() ? it : zipTree(it)
+	        }
         }
     
-     from('src/main/java')  {
+     from('src/main/java')  
+     {
         include 'log4j_ssf.properties'
      }
      
-     from('src/main/java')  {
+     from('src/main/java')  
+     {
         include 'help.txt'
      }
 }
