Reset properties files.

--- a/savedsearch-web/testenv.properties
+++ b/savedsearch-web/testenv.properties
@@ -1,4 +1,4 @@
-#Sun, 30 Nov 2014 08:57:13 -0800
+#Thu, 04 Dec 2014 05:39:03 -0800
 
-hostname=slc02kaa.us.oracle.com
-port=7001
+hostname=slc00bqs.us.oracle.com
+port=7021
