--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,12 @@ systemProp.http.proxyPort=80
 systemProp.http.nonProxyHosts=*.oracle.com|localhost
 
 #Artifactory properties
-artifactory_user=em-alm
-artifactory_password={DESede}eHc0bSvsxdGITA8Yd1eJVg==
-artifactory_contextUrl=http://almprd-mr1.us.oracle.com:8081/artifactory
+#artifactory_user=em-alm
+#artifactory_password={DESede}eHc0bSvsxdGITA8Yd1eJVg==
+#artifactory_contextUrl=http://almprd-mr1.us.oracle.com:8081/artifactory
+artifactory_contextUrl=http://artifactory.oraclecorp.com/artifactory
+artifactory_user=emaas
+artifactory_password={DESede}sTj5j01KKq9J2Or/dibOig==
 
 #ftp
 ftpserver=scl36023.us.oracle.com
