--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -31,15 +31,10 @@ jar {
 	from('../savedsearch-schema/src/main/sql/upgrade')
 	{ 
 		include '*.*'
-		into('/oracle')
-		
-		 
+		into('/oracle') 
 	}
 	
-	
 }
-
-   
 
 
 dependencies {
@@ -52,11 +47,11 @@ dependencies {
 	compile(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2')
 	compile(group: 'javax', name: 'ejb', version: '3.2.0')
 	compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.8.8')
-        compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.1')
-
-        compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.1')
-        compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12')
-        compile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2')
-        }
+    compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.1')
+    compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.1')
+    compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12')
+    compile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2')
+    compile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.1')
+   }
 
 
