--- a/savedsearch-web/.classpath
+++ b/savedsearch-web/.classpath
@@ -48,6 +48,6 @@
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/xml-path-1.9.0.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/rest-assured-common-2.3.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="/scratch/vinjoshi/Emaassrc/tmp/sprint19/emcpssf/dependencies/artifactory/emaas-platform-tenant-sdk-0.1.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/emaas-platform-tenant-sdk-0.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
