--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -130,7 +130,7 @@ dependencies {
 	providedCompile(group: 'com.jayway.restassured', name:'xml-path', version:'1.9.0')
 	providedCompile(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1')
 	providedCompile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.1')
-	
+        providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.1')	
 
 	enunciateCore 'org.codehaus.enunciate:enunciate-core:1.28'
 	restDoc(
