--- a/savedsearch-ear/build.gradle
+++ b/savedsearch-ear/build.gradle
@@ -33,6 +33,7 @@ dependencies
 	earlib (project(':savedsearch-web-utils')){transitive = false} 
 	earlib(group: 'emaas.platform', name: 'registry-lookup-client', version: '0.23.4') {transitive=false }
 	earlib(group: 'emaas.platform', name: 'registry-client', version: '0.23.4') {transitive=false }
+        earlib(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.1') {transitive=false }
         earlib(group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.0') {transitive=false }
         earlib(group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.0') {transitive=false }
         earlib(group: 'org.apache.logging.log4j', name: 'log4j-web', version: '2.0') {transitive=false }	
