Removed depency of tenantsdk jar from core project

--- a/savedsearch-web/testenv.properties
+++ b/savedsearch-web/testenv.properties
@@ -1,15 +1,8 @@
-#Mon, 26 Jan 2015 08:25:32 -0800
-
+#Mon, 27 Oct 2014 20:36:27 -0700
 
 hostname=slc00bqs.us.oracle.com
 port=7021
 #weblogic:password1
 #authToken=Basic d2VibG9naWM6cGFzc3dvcmQx
 #weblogic:welcome1
-authToken=Basic d2VibG9naWM6d2VsY29tZTE\=
-
-#hostname=slc02kaa.us.oracle.com
-#port=7001
-#hostname=slc04wjk.us.oracle.com
-#port=7001
-#authToken=Basic d2VibG9naWM6d2VsY29tZTE\=
+authToken=Basic d2VibG9naWM6d2VsY29tZTE=
