--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -112,6 +112,9 @@ dependencies {
 	providedCompile(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1')
 	providedCompile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.1')
 	providedCompile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0')
+        
+    providedCompile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.2')
+    providedCompile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.2')
 
 	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.1')
 	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12')
