--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,13 @@ allprojects {
 	repositories {  
 		mavenLocal()  
 		maven {  
-			url = "${artifactory_contextUrl}" + '/repo'  
+			url = "${artifactory_contextUrl}" + '/emaas-virtual'  
 			credentials {  
 			username = "${artifactory_user}"  
 			password = "${artifactory_password}"  
 		} 
 	}  
-	mavenCentral()  
+//	mavenCentral()  
 	}  
 }
 
@@ -171,17 +171,17 @@ buildscript {
 	repositories {  
 		mavenLocal()  
 		maven {  
-			url = "${artifactory_contextUrl}" + '/repo' 
+			url = "${artifactory_contextUrl}" + '/emaas-virtual' 
 			credentials {  
 			username = "${artifactory_user}"  
 			password = "${artifactory_password}"  
 			}  
 		} 
-		mavenCentral()  
+	//	mavenCentral()  
 	}
 
 	dependencies {  
-		classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:2.1.0'  
+		classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:2.2.5'  
 		classpath 'com.oracle.emaas.emdi:DevInfraPlugin:1.0.+'
 	}  
 }
