--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ remote_restdoc_dir=restdoc
 
 # Sonar runner (Code coverage reports) requires more memory to complete
 org.gradle.jvmargs=-XX:MaxPermSize=2g
+
+testinfraVersion=1.0+
+artifactory_repoName=repo
+artifactory_repoKey=emaas-sandbox-local
