--- a/savedsearch-entities/build.gradle
+++ b/savedsearch-entities/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 
+
+
+/* By default the group is set to the directory name, as 'lrg_branch' which is inconsistent name. Hence
+ * Setting the group as 'com.oracle.emaas.emcpssf (as suggested by DevTools team)
+ */
+group = 'com.oracle.emaas.emcpssf'
+version = '1.0.1'
+
 jar {
 	from('src/main/java/META-INF')
 	{ 
@@ -17,4 +25,15 @@ jar {
 dependencies {
 	compile(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.0')
 	compile(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') 
+}
+publishing {
+    publications {
+        savedsearchEntities(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
+artifactoryPublish {
+    publications('savedsearchEntities')
 }
