--- a/savedsearch-web/.classpath
+++ b/savedsearch-web/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="src/integTest/java"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="oracle.eclipse.tools.weblogic.lib.application/savedsearch-ee"/>
@@ -21,11 +21,6 @@
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/testng-6.8.8.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/wlfullclient-2.6.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/savedsearch-core"/>
-	<classpathentry kind="src" path=".apt_src">
-		<attributes>
-			<attribute name="optional" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/commons-codec-1.6.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/commons-lang3-3.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/commons-logging-1.1.1.jar"/>
