--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #Systemwide properties
 systemProp.http.proxyHost=www-proxy.us.oracle.com
 systemProp.http.proxyPort=80
-systemProp.http.nonProxyHosts=*.oracle.com|localhost
+systemProp.http.nonProxyHosts=*.oracle.com|*.oraclecorp.com|localhost
 
 #Artifactory properties
 #artifactory_user=em-alm
