--- a/savedsearch-tools/build.gradle
+++ b/savedsearch-tools/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4')
 	compile(group: 'com.jayway.jsonpath', name: 'json-path', version: '0.9.1')
 	compile(group: 'log4j', name: 'log4j', version:'1.2.16')
+//	compile(group: 'log4j', name: 'log4j', version:'2.0')
+//compile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1')
+//compile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1')
     compile(group: 'emaas.platform', name: 'registry-client', version: '0.23.6')
 	compile(group: 'emaas.platform', name: 'registry-lookup-client', version: '0.23.6')    
 	compile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.0')
