Test only - fix the ssf_lrg and dependencies

--- a/savedsearch-tools/.classpath
+++ b/savedsearch-tools/.classpath
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="src/integTest/java"/>
 	<classpathentry excluding="oracle/sysman/emSDK/emaas/platform/updatesearch/test/fileutil/" kind="src" path="src/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/rest-assured-2.3.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/rest-assured-common-2.3.1.jar"/>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/jettison-1.3.4.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/jettison-1.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/httpclient-4.3.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/httpcore-4.3.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/httpmime-4.3.1.jar"/>
