--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,13 @@ ext.serviceInstallPath = "/opt/ORCLemaas/Applications/${serviceName}/${projectVe
 ext.serviceDistDir = "${distDir}${serviceInstallPath}" 
 
 apply plugin: 'java' 
-
+apply plugin: 'TestInfraPlugin'
 allprojects {  
 	apply plugin: 'artifactory-publish'
 	apply plugin: 'artifactory' 
 	apply plugin: 'DevInfraPlugin' 
       	apply plugin: 'maven-publish'
-	apply plugin: 'em-test-infra'
+	apply plugin: 'TestInfraPlugin'
 	ext.dependenciesDir = new File(rootDir, 'common') 
 	repositories {  
 		mavenLocal()  
@@ -88,7 +88,7 @@ dependencies {
 	prebuild_servicemanager 'emaas.platform:registry-client:0.23.6',
                                 'emaas.platform:registry-lookup-client:0.23.6'
 	prebuild_savedsearch    'com.oracle.adf:wls-api:12.1.2-0-0',
-				'com.oracle.weblogic:ojdbc6:12.1.2-0-0',
+				'com.oracle.jdbc:ojdbc6:12.1.0.1.0',
 				'javax.transaction:javax.transaction-api:1.2',
 			//	'javax:ejb:3.2.0',
 				'javax.servlet:servlet-api:2.5',
@@ -110,13 +110,13 @@ dependencies {
 			'org.codehaus.jettison:jettison:1.3.4'
 	prebuild_testng 'org.testng:testng:6.8.8',
 			'com.sun.jersey:jersey-client:1.17',
-			'com.oracle.weblogic:jersey-multipart-1.17.1:12.1.2-0-0',
+			'com.sun.jersey.contribs:jersey-multipart:1.17.1',
 			'org.codehaus.groovy:groovy-all:2.2.1',
 			'org.apache.commons:commons-lang3:3.1',
 			'com.jayway.restassured:json-path:1.8.1',
 			'com.jayway.restassured:xml-path:1.9.0',
 			'com.jayway.restassured:rest-assured-common:2.3.1',
-			'com.jayway.restassured:rest-assured:2.3.1'
+			'com.jayway.restassured:rest-assured:2.3.0'
 	prebuild_wlfullc 'test:wlfullclient:2.6'
 }
 
@@ -167,7 +167,7 @@ project(':savedsearch-web'){
 		compile(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0')
     		compile(group: 'emaas.platform', name: 'registry-lookup-client', version: '0.23.6') 
 		compile(group: 'emaas.platform', name: 'registry-client', version: '0.23.6') 
-		ftpAntTask('org.apache.ant:ant-commons-net:12.1.2-0-0'){
+		ftpAntTask('org.apache.ant:ant-commons-net:1.8.4'){
 			module('commons-net:commons-net:1.4.1'){
 				dependencies 'oro:oro:2.0.8:jar'
 			}
@@ -191,7 +191,7 @@ buildscript {
 	dependencies {  
 		classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:2.2.5'  
 		classpath 'com.oracle.emaas.emdi:DevInfraPlugin:1.0.+'
-		classpath group: 'com.oracle.emaas.emdi', name: 'testinfra', version: "${testinfraVersion}", transitive: true
+		classpath group: 'com.oracle.emaas.emdi', name: 'TestInfraPlugin', version: "${testinfraVersion}", transitive: true
 	}  
 }
 
