--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -8,8 +8,8 @@ ext.restDocRootDir = "${buildDir}/restdoc"
 ext.restDocOutputDir = "${restDocRootDir}"
 
 apply plugin: 'maven-publish'
-apply plugin: 'em-test-infra'
-
+apply plugin: 'TestInfraPlugin'
+apply from: 'test.gradle'
 
 jar.archiveName='emcpssf_qa_test.jar'
 group = 'com.oracle.emaas.emcpssf'
@@ -23,7 +23,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath group: 'com.oracle.emaas.emdi', name: 'testinfra', version: "${testinfraVersion}", transitive: true
+        classpath group: 'com.oracle.emaas.emdi', name: 'TestInfraPlugin', version: "${testinfraVersion}", transitive: true
 		
         
 }  
@@ -70,28 +70,11 @@ sourceSets {
                             }
 
 
-			    integTest {
-      				java.srcDir 'src/integTest/java'
-				resources.srcDir file('src/integTest/resources')
-				compileClasspath = configurations.lrgConfig 
-    }
-
-
-}
-task integTestJar (type:Jar) {
-    from sourceSets.integTest.output
-    appendix = 'integ-tests'
-
 }
 
 
 publishing {
     publications {
-/*
-        savedsearchWeb(MavenPublication) {
-              from components.java
-        }
-*/
         integTest(MavenPublication) {
             setArtifactId(project.name + '-' + integTestJar.appendix)
             artifact integTestJar.archivePath
@@ -101,28 +84,27 @@ publishing {
                     def dependency = dependencies.appendNode('dependency')
                     dependency.appendNode('groupId', it.moduleGroup)
                     dependency.appendNode('artifactId', it.moduleName)
-		    if (it.moduleVersion != 'unspecified') {
-                        println "VERSION for ${it.moduleName} = ${it.moduleVersion}"
-                        dependency.appendNode('version', it.moduleVersion)
-                    }
-		    else {
-                        dependency.appendNode('version', '')
-
-	            }
+                    dependency.appendNode('version', it.moduleVersion)
                 }
             }
         }
     }
     repositories {
         maven {
-            url "${artifactory_contextUrl}/${artifactory_repoKey}"
+            url "${artifactory_contextUrl}/emaas-sandbox-local"
             credentials {
                 username = "${artifactory_user}"
                 password =  "${artifactory_password}"
             }
         }
     }
-}
+}    
+
+
+
+
+
+
 task runQATestSuite(type: Test){
         useTestNG(){
         dependsOn ':savedsearch-ear:ear'
@@ -202,7 +184,7 @@ dependencies {
 	providedCompile(group: 'javax.servlet', name:'servlet-api', version:'2.5'){transitive = false}
 //	providedCompile(group: 'javax', name: 'ejb', version: '3.2.0')
 	providedCompile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17')
-	providedCompile(group: 'com.oracle.weblogic', name: 'jersey-multipart-1.17.1', version: '12.1.2-0-0'){transitive = false}
+	providedCompile(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1') { transitive = false }
 	providedCompile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
 	providedCompile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){transitive = false}
         
@@ -219,7 +201,7 @@ dependencies {
 	providedCompile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3'){transitive = false}
 	providedCompile(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1'){transitive = false}
 	
-	providedCompile(group: 'org.testng', name:'testng', version:'6.8.8')
+	providedCompile(group: 'org.testng', name:'testng', version:'6.8.8'){exclude module: 'hamcrest-core'}
 	providedCompile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1'){transitive = false}
 	
 	providedCompile(group: 'com.jayway.restassured', name:'json-path', version:'1.8.1'){transitive = false}
@@ -229,41 +211,7 @@ dependencies {
         providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2')	
 
 
-lrgConfig project(':savedsearch-web') 
-	lrgConfig project(':savedsearch-entities'){transitive = false}
-	lrgConfig project(':savedsearch-core')  {transitive = false}
-	lrgConfig(group: 'javax.servlet', name:'servlet-api', version:'2.5'){transitive = false}
-//	lrgConfig(group: 'javax', name: 'ejb', version: '3.2.0'){transitive = false}
-	lrgConfig(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17'){transitive = false}
-	lrgConfig(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1'){transitive = false}
-	lrgConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.1'){transitive = false}
-	lrgConfig(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){transitive = false}
 
-	lrgConfig(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.12'){transitive = false}
-	lrgConfig(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12'){transitive = false}
-	lrgConfig(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){transitive = false}
-	
-	lrgConfig(group: 'org.apache.commons', name:'commons-lang3', version:'3.1'){transitive = false}
-	lrgConfig(group: 'org.hamcrest', name:'hamcrest-core', version: '1.3'){transitive = false}
-	lrgConfig(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1'){transitive = false}
-	lrgConfig(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3'){transitive = false}
-	lrgConfig(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1'){transitive = false}
-
-
- 	lrgConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){transitive = false}
-        lrgConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){transitive = false}
-
-        providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2')	{transitive = false}
-
-	
-	lrgConfig(group: 'org.testng', name:'testng', version:'6.8.8'){transitive = false}
-	lrgConfig(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1'){transitive = false}
-	
-	lrgConfig(group: 'com.jayway.restassured', name:'json-path', version:'1.8.1'){transitive = false}
-	lrgConfig(group: 'com.jayway.restassured', name:'xml-path', version:'1.9.0'){transitive = false}
-	lrgConfig(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1'){transitive = false}
-	lrgConfig(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.1'){transitive = false}
-        lrgConfig(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2'){transitive = false}
 
 
 
